resources/assets/less/bem/forum-post.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.forum-post {
  @_top: forum-post;
  @_padding-content: 20px;

  border-bottom: 1px solid @osu-colour-b1;
  padding: 0;

  display: flex;

  &.js-forum-post--hidden {
    opacity: 0.5;
  }

  &.js-forum-post--highlighted {
    background-color: @osu-colour-b3;
  }

  &__actions {
    display: none;
    position: absolute;
    transition: opacity 120ms ease-in-out;
    will-change: opacity;

    right: @gutter-v2;
    top: (@_padding-content - 10px);

    @media @desktop {
      right: @gutter-v2-desktop;
      display: flex;
      opacity: 0;
    }

    .@{_top}:hover & {
      @media @desktop {
        opacity: 1;
      }
    }
  }

  &__body {
    flex: 1;
    display: flex;
    flex-direction: column;

    // to prevent child from overflowing
    // reference: https://bugzilla.mozilla.org/show_bug.cgi?id=1108514#c2
    min-width: 0;
  }

  &__content {
    font-size: @font-size--normal;
    flex: none;
    padding: 0 @gutter-v2 @_padding-content @_padding-content;

    @media @desktop {
      padding-right: @gutter-v2-desktop;
    }

    &--footer {
      color: @osu-colour-c2;
    }

    &--header {
      padding-top: 10px;
      display: flex;

      @media @desktop {
        padding-top: @_padding-content;
      }
    }

    &--main {
      flex: 1 0 auto;
    }

    &--signature {
      border-top: 1px solid @osu-colour-b1;

      padding: 10px 0 0;
      margin: 0 @gutter-v2 @_padding-content @_padding-content;
      color: @osu-colour-c2;
      display: none;
      max-height: 170px;
      overflow: hidden;

      @media @desktop {
        display: block;
        margin-right: @gutter-v2-desktop;
      }
    }
  }

  &__menu {
    @media @desktop {
      display: none;
    }
  }
}

